--- a/ASP-MVC/appsettings.json
+++ b/ASP-MVC/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  //Database connection strings
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-0HDE8OU\\TEST;Database=ToDoListMVC;Trusted_connection=true;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
